fix(dialog): Fix scrolling content overflowing on Chrome/Android, Safari.

--- a/packages/mdc-dialog/_mixins.scss
+++ b/packages/mdc-dialog/_mixins.scss
@@ -376,7 +376,7 @@
 @mixin mdc-dialog-min-width($min-width, $query: mdc-feature-all()) {
   $feat-structure: mdc-feature-create-target($query, structure);
 
-  .mdc-dialog__surface {
+  .mdc-dialog__container {
     @include mdc-feature-targets($feat-structure) {
       min-width: $min-width;
     }
@@ -385,9 +385,9 @@
 
 @mixin mdc-dialog-max-width($max-width, $margin, $query: mdc-feature-all()) {
   $feat-structure: mdc-feature-create-target($query, structure);
-  $max-size-calc-expr: calc(100vw - #{$margin * 2});
+  $max-size-calc-expr: calc(100% - #{$margin * 2});
 
-  .mdc-dialog__surface {
+  .mdc-dialog__container {
     @include mdc-feature-targets($feat-structure) {
       @if $max-width {
         $max-width-breakpoint: $max-width + ($margin * 2);
@@ -410,9 +410,9 @@
 
 @mixin mdc-dialog-max-height($max-height, $margin, $query: mdc-feature-all()) {
   $feat-structure: mdc-feature-create-target($query, structure);
-  $max-size-calc-expr: calc(100vh - #{$margin * 2});
+  $max-size-calc-expr: calc(100% - #{$margin * 2});
 
-  .mdc-dialog__surface {
+  .mdc-dialog__container {
     @include mdc-feature-targets($feat-structure) {
       @if $max-height {
         $max-height-breakpoint: $max-height + ($margin * 2);
